--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         justify-content: center;
         align-items: center;
         height: 100vh;
-        background-color: #000;
+        background-color: #ffffff;
         }
         canvas {
         border: 1px solid #fff;
