--- a/game.html
+++ b/game.html
@@ -10,10 +10,52 @@
             display: block;
             margin: auto;
         }
+
+        #questionContainer {
+            display: none;
+            text-align: center;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+        }
+        #questionImg {
+            max-width: 100%;
+            height: auto;
+        }
+        #answerInput {
+            margin-top: 10px;
+            padding: 5px;
+        }
+        #submitAnswer {
+            margin-top: 10px;
+            padding: 5px 10px;
+            cursor: pointer;
+        }
+        #feedback {
+            color: red;
+            font-weight: bold;
+            margin-top: 10px;
+        }
     </style>
 </head>
 <body>
     <canvas id="gameCanvas"></canvas>
+
+     <!-- Question Popup -->
+     <div id="questionContainer">
+        <img id="questionImg" src="" alt="Question">
+        <br>
+        <input type="text" id="answerInput" placeholder="Enter Answer">
+        <br>
+        <button id="submitAnswer">Submit</button>
+        <p id="feedback"></p>
+    </div>
+
     <script>
         const canvas = document.getElementById("gameCanvas");
         const ctx = canvas.getContext("2d");
@@ -25,14 +67,16 @@
         let velocityY = 0;
         let gravity = 0.5;
         let isJumping = false;
+        let paused = false;  
 
         let obstacles = [
-            { x: 500, speed: 3 },
-            { x: 800, speed: 3 },
-            { x: 1200, speed: 3 },
-            { x: 2000, speed: 3 }
+            { x: 500, speed: 1.5 },
+            { x: 800, speed: 1.5 },
+            { x: 1200, speed: 1.5 },
+            { x: 2000, speed: 1.5 }
         ];
 
+        let questionData = null;  
         let backgroundOffset = 0; // Background movement
         const backgroundSpeed = 3; // Same speed as obstacles
 
@@ -40,6 +84,20 @@
         let highScore = localStorage.getItem("highScore") || 0;
         let gameOver = false;
 
+        const questionContainer = document.getElementById("questionContainer");
+        const questionImg = document.getElementById("questionImg");
+        const answerInput = document.getElementById("answerInput");
+        const submitAnswer = document.getElementById("submitAnswer");
+        const feedback = document.getElementById("feedback");
+
+        async function fetchQuestion() {
+            try {
+                const response = await fetch("https://marcconrad.com/uob/banana/api.php?out=json");
+                questionData = await response.json();
+            } catch (error) {
+                console.error("Error fetching question:", error);
+            }
+        }
         setInterval(() => {
             if (!gameOver) {
                 score += 1;
@@ -72,12 +130,38 @@
             for (let obstacle of obstacles) {
                 if (ballX + 19 > obstacle.x && ballX - 19 < obstacle.x + 30 &&
                     ballY + 19 > 375 && ballY - 19 < 400) {
-                    gameOver = true;
-                    return true;
+                        paused = true;
+                        // Show question pop-up
+                        showQuestion();
+                return true;
                 }
             }
             return false;
         }
+
+        function showQuestion() {
+            if (questionData) {
+                questionImg.src = questionData.question;
+                questionContainer.style.display = "block";
+            } else {
+                console.error("No question data available.");
+            }
+        }
+
+        submitAnswer.addEventListener("click", () => {
+            const userAnswer = answerInput.value.trim();
+            if (userAnswer.toLowerCase() === questionData.solution.toLowerCase()) {
+                // Correct answer, resume game
+                questionContainer.style.display = "none";
+                paused = false;
+                answerInput.value = "";
+                feedback.textContent = "";
+                requestAnimationFrame(drawScene);
+            } else {
+                // Wrong answer
+                feedback.textContent = "Answer is Wrong! Try Again.";
+            }
+        });
 
         function updateBackground() {
             backgroundOffset += backgroundSpeed; // Move background rightward
@@ -115,12 +199,14 @@
         }
 
         function updateObstacles() {
-            obstacles.forEach(obstacle => {
-                obstacle.x -= obstacle.speed;
-                if (obstacle.x < -30) {
-                    obstacle.x = canvas.width + Math.random() * 200;
-                }
-            });
+            if (!paused) {
+                obstacles.forEach(obstacle => {
+                    obstacle.x -= obstacle.speed;
+                    if (obstacle.x < -30) {
+                        obstacle.x = canvas.width + Math.random() * 200;
+                    }
+                });
+            }
         }
 
         function drawScore() {
@@ -164,10 +250,7 @@
         }
 
         function drawScene() {
-            if (gameOver) {
-                drawGameOver();
-                return;
-            }
+            if (gameOver|| paused) return; 
 
             ctx.clearRect(0, 0, canvas.width, canvas.height);
             updateBackground();
@@ -183,8 +266,8 @@
             drawBall();
             obstacles.forEach(obstacle => drawObstacle(obstacle.x));
             updateObstacles();
-            applyPhysics();
             drawScore();
+            applyPhysics();
 
             if (checkCollision()) return;
 
@@ -192,6 +275,9 @@
         }
 
         drawScene();
+
+         // Fetch a question at game start
+         fetchQuestion().then(() => drawScene());
     </script>
 </body>
 </html>
