changed the start button

--- a/start.html
+++ b/start.html
@@ -10,7 +10,7 @@
     <div class="background">
         <div class="start-container">
             <h1 id="heading">INFINITY RUNNER</h1> 
-            <img id="startButton" src="images/Start_1.png" alt="Start Button">
+            <img id="startButton" src="images/start.png" alt="Start Button">
         </div>
         <div id="accountOptions" class="account-options hidden">
             <button id="newUser">New User</button>
