updated the settings

--- a/start.html
+++ b/start.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="start.css">
 </head>
 <body>
+    <!-- Audio element will be created dynamically -->
     <div class="background">
         <div class="start-container">
             <h1 id="heading">INFINITY RUNNER</h1> 
